fixed the alignment

--- a/index_styles.css
+++ b/index_styles.css
@@ -14,6 +14,7 @@ body {
 .main-bar {
   position: fixed;
   width: auto;
+  height: 120px;
   right: 0;
   margin-top: 1vh;
   margin-right: 1vh;
@@ -26,10 +27,38 @@ body {
   border-radius: 20px;
 }
 
-.webpage {
+.webpage-title {
   font-family: 'Montserrat', sans-serif;
   font-size: 45px;
   color: #2C6B4F;
   background-color: transparent;
   margin: 1vh;
+  text-align: right;
+}
+
+.menu-bar {
+  position: fixed;
+  width: auto;
+  height: 70px;
+  left: 0;
+  margin-top: 1vh;
+  margin-left: 1vh;
+  background-color: #2C2C2C;
+  border-top: solid transparent;
+  border-left: solid transparent;
+  border-right: solid transparent;
+  z-index: 1;
+  box-sizing: border-box;
+  border-radius: 20px;
+}
+
+.main-menu {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  color: #2C6B4F;
+  background-color: transparent;
+  margin: 1vh;
+  display: flex;
+  gap: 1vh;
+  text-align: right;
 }
